--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -12,6 +12,15 @@
         android:layout_height="50dp"
         android:src="@mipmap/ic_launcher"/>
 
+
+    <ImageView
+        android:id="@+id/onlineIV"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/online_round"
+        android:layout_alignBottom="@id/profile_image"
+        android:layout_alignEnd="@id/profile_image"/>
+
     <TextView
         android:id="@+id/username"
         android:layout_width="wrap_content"
